# docs/swagger.yaml
@@ -66,7 +66,17 @@ definitions:
     type: object
   internal_rest_controller_auth.onetimeAuthResponse:
     properties:
+      entry_id:
+        type: string
       uri:
+        type: string
+    type: object
+  internal_rest_controller_auth.refreshResponse:
+    properties:
+      access_token:
+        type: string
+      refresh_token:
+        description: TODO для разработки
         type: string
     type: object
   internal_rest_controller_vehicle.ListResponse:
@@ -118,6 +128,12 @@ paths:
       - auth
   /auth/logout:
     post:
+      parameters:
+      - description: refresh токен
+        in: header
+        name: refresh-token
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -186,7 +202,7 @@ paths:
   /auth/refresh:
     post:
       parameters:
-      - description: asdfasdf
+      - description: refresh токен
         in: header
         name: refresh-token
         required: true
@@ -197,7 +213,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/internal_rest_controller_auth.loginResponse'
+            $ref: '#/definitions/internal_rest_controller_auth.refreshResponse'
         "400":
           description: Bad Request
           schema:
